# Logwarts

./: .gitignore  CHANGELOG.md  LICENSE  README.md  RELEASE.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
examples/: cli_publish_logs.py  dictconfig_example.py  fastapi_uvicorn_logs.py
scripts/: prepare_release.sh  publish_release.sh  tag_release.sh
src/: test_handler.py  test_integration_local_broker.py  test_log_event.py  test_logging.py  test_publisher.py  test_setup.py
src/logwarts/: __init__.py  handlers.py
src/logwarts/models/: __init__.py  config.py  context.py  exception.py  log_event.py  test_setup.py
src/logwarts/mqtt/: __init__.py  publisher.py
