[project]
name = "logwarts"
version = "0.1.0"
description = "MQTT Logging Library"
authors = [
    {name = "bealins"}
]
license = {text = "MIT"}
requires-python = ">=3.12,<4.0"
dependencies = [
    "gmqtt>=0.7.0",
    "loguru>=0.7.3",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0"
]

[tool.poetry]
packages = [{include = "logwarts", from = "src"}]

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-cov = "^5.0.0"
taskipy = "^1.12.0"
ruff = "^0.3.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.taskipy.tasks]
lint = "ruff check ."
format = "ruff format ."
test = "pytest -v"
post_test = "pytest --cov=src -v"